fixed nav spacing responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ nav {
 }
 
 nav ul {
-    margin-right: 5vw;
+    margin-right: 5%;
     list-style: none;
     display: flex;
 }
@@ -57,7 +57,7 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 2.1rem;
-    margin: 0 1rem;
+    margin: 0 2rem;
 }
 
 /* hero image */
@@ -104,7 +104,13 @@ h2 {
 
 /* media queries */
 
-@media (max-width: 320px) {
+@media (max-width: 410px) {
+    nav ul li a {
+        margin: 0 .5rem;
+    }
+}
+
+@media (max-width: 560px) {
     .videowrapper {
         position: relative;
         padding-bottom: 56.25%;
